--- a/select_menu_js/index.html
+++ b/select_menu_js/index.html
@@ -33,8 +33,8 @@
       </div>
       <button onclick="result()">룰렛 생성하기</button>
       <div id="random" class="random">
-        <!-- <canvas width="380" height="380"></canvas>
-        <button onclick="rotate()">뭐먹을까?</button> -->
+        <!-- <canvas width="380" height="380"></canvas> -->
+        <!-- <button onclick="rotate()">뭐먹을까?</button> -->
       </div>
     </div>
   </body>
